results/classifier/zero-shot/118/kernel/1774
kernel: 0.825
vnc: 0.692
graphic: 0.686
user-level: 0.643
ppc: 0.629
semantic: 0.600
device: 0.600
files: 0.558
PID: 0.526
socket: 0.501
permissions: 0.501
mistranslation: 0.485
boot: 0.460
network: 0.456
TCG: 0.435
register: 0.430
VMM: 0.428
architecture: 0.421
virtual: 0.421
risc-v: 0.414
performance: 0.403
i386: 0.394
hypervisor: 0.347
x86: 0.341
arm: 0.328
assembly: 0.317
debug: 0.283
KVM: 0.282
peripherals: 0.273

8.1-rc0 failure to build with capstone 5.0
Description of problem:
Use >=capstone-5.0 dependency, try to build qemu, get this error:
```
/opt/homebrew/Cellar/capstone/5.0/include/capstone/tricore.h:561:3: error:
redefinition of 'tricore_feature' as different kind of symbol
} tricore_feature;
  ^
../target/tricore/cpu.h:261:19: note: previous definition is here
static inline int tricore_feature(CPUTriCoreState *env, int feature)
                  ^
1 error generated.
```

The fix is trivial and it was already mentioned in the mailing list but wasn't fixed for rc0, so I figured it might have been forgotten about.

https://lore.kernel.org/qemu-devel/CA+PgxXVxVKpT0SZ3N+Fc1YvXCiwkkbqm0FmLKqLTbgcDpYCNgg@mail.gmail.com/

If you meet any other problem with capstone (e.g. some regression), please don't hesitate to report it mainstream.

There are plans to make a new patch release soon with fixes for some most annoying bugs since the 5.0 release: https://github.com/capstone-engine/capstone/issues/2081

https://github.com/capstone-engine/capstone/releases
